payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-ms
spec:
  #loadBalancerIP: 52.224.164.99
  #type: LoadBalancer
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 8091
  selector:
    app: payment-ms
