un-deployment-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payment-ms
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: payment-ms.b88b6fc891c546469957.eastus.aksapp.io
